[package]
name = "rustywiki"
version = "0.1.0"
authors = ["John Turner <johnt7_@hotmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.15"
clap = ""
rocket = ""
log = "0.4.6"
simplelog = "^0.5.0"
rocket_contrib = "0.4.1"
rocket_contrib_codegen = "0.4.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = ""
base64 = ""
rocket_prometheus = "0.6.0"